# Mould_system_backend

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  image_binary_meta_protobuf_transport_design.md  launch_plan.json  tmp.txt
.claude/: .fuse_hidden000034fe00000008  .fuse_hidden000035720000000a  .fuse_hidden000035740000000b  .fuse_hidden0000360b0000000f  .fuse_hidden000036c00000000e  settings.json
.claude/agents/: implementer.md  test_runner.md  verifier.md
.cursor/rules/: Mould.mdc
cmake/: platform.cmake  third_party.cmake
cmake/modules/: FindModuo.cmake  FindMySQLClient.cmake  FindOSSSDK.cmake  FindRabbitMQC.cmake
common/: CMakeLists.txt
common/comm/: CMakeLists.txt  daemon_membership_observability_test.cpp  module_factory_registry_test.cpp  mouldBase_test.cpp  multi_consumer_cursor_reclaim_test.cpp  process_shared_sync_backpressure_test.cpp  shm_ring_buffer_layout_test.cpp  shm_segment_test.cpp  split_shm_bus_control_runtime_test.cpp  supervisor_test.cpp
common/comm/include/: callback_queue.hpp  channel_factory.hpp  comm.hpp  grpc_pubsub_bus.hpp  image_pipeline.hpp  interfaces.hpp  module_base.hpp  module_factory_registry.hpp  module_launcher.hpp  module_launcher_utils.hpp  payload_codec.hpp  ready_pipe_protocol.hpp  refcounted_message_store.hpp  reliability.hpp  restart_policy.hpp  shm_bus_control_plane.hpp  shm_bus_runtime.hpp  shm_bus_runtime_prefork.hpp  shm_pubsub_bus.hpp  shm_ring_buffer.hpp  shm_segment.hpp  supervisor.hpp
common/comm/src/: callback_queue.cpp  channel_factory.cpp  image_pipeline.cpp  module_base.cpp  module_factory_registry.cpp  module_launcher.cpp  module_launcher_utils.cpp  payload_codec.cpp  ready_pipe_protocol.cpp  refcounted_message_store.cpp  reliability.cpp  restart_policy.cpp  shm_bus_control_plane.cpp  shm_bus_runtime.cpp  shm_bus_runtime_prefork.cpp  shm_pubsub_bus.cpp  shm_ring_buffer.cpp  shm_segment.cpp  supervisor.cpp
common/config/: CMakeLists.txt  channel_topology_config_gtest.cpp  channel_topology_config_test.cpp  launch_plan_config_test.cpp  launch_plan_fork_smoke.cpp  launch_plan_registered_names_gtest.cpp  test_launch_plan_gflags_registrar.cpp
common/config/include/: channel_topology_config.hpp  launch_plan_config.hpp
common/config/src/: channel_topology_config.cpp  launch_plan_config.cpp
common/include/: ms_logging.hpp  test_helpers.hpp  thread_pool.hpp
common/proto/: gateway_frame_ingress.proto  image_frame.proto
common/proto/image_meta_extensions/: defect_detection.proto  quality_inspection.proto  surface_metering.proto
common/proto/mould/comm/: aggregate.proto  image_meta.proto
docs/: acceptance.md  backend_architecture.md  build.md  channel_topology_runtime.md  clean_build_drill.md  cmake_migration_philosophy.md  cross_node_gateway_detailed_design.md  cross_node_transport_design.md  dependency_acceptance_checklist.md
gate/: CMakeLists.txt  router_dispatcher.hpp
gate/config/: auto_include_confirmation.txt  gateway_config.example.json
gate/docs/: deployment.md  http_api_spec.md
gate/gflags/: gateway_module_gflags.cpp  gateway_module_gflags.hpp
gate/handler/: CMakeLists.txt  body_parser.hpp  counter_handler.cpp  counter_handler.hpp  frame_payload_builder.hpp  ihandler.hpp  ingest_handler.cpp  ingest_handler.hpp  metrics_recorder.hpp  rate_limiter.hpp  request_validator.hpp  shm_frame_publisher.hpp  uuid_generator.hpp
gate/http/: CMakeLists.txt  muduo_http_server.cpp  muduo_http_server.hpp  request_view.hpp
gate/module/: CMakeLists.txt  http_gateway_module.cpp  http_gateway_module.hpp
gate/oss/: CMakeLists.txt  iblob_storage_uploader.hpp  local_file_uploader.hpp  noop_uploader.hpp  oss_client.cpp  oss_client.hpp  upload_path_policy.hpp
gate/tests/: CMakeLists.txt  gateway_module_test.cpp  handler_components_test.cpp  handler_test.cpp  http_test.cpp  oss_client_test.cpp  oss_stress_test.cpp  oss_test.cpp  proto_extensions_test.cpp
logging/: CMakeLists.txt  log_pipeline_test.cpp
logging/gflags/: logging_module_gflags.hpp
logging/include/: log_collector.hpp  log_dump_manager.hpp  log_pipe_manager.hpp  log_sink.hpp  logging_fork_gflags.hpp  subprocess_log_init.hpp
logging/module/: logging_module.cpp
logging/src/: log_collector.cpp  log_dump_manager.cpp  log_pipe_manager.cpp  log_sink.cpp  logging_fork_gflags.cpp  subprocess_log_init.cpp
services/backend/: CMakeLists.txt  main.cpp
services/backend/gflags/: actuator_coord_module_gflags.cpp  actuator_coord_module_gflags.hpp  compete_stress_modules_gflags.cpp  compete_stress_modules_gflags.hpp  logging_module_gflags.cpp  path_plan_module_gflags.cpp  path_plan_module_gflags.hpp  risk_eval_module_gflags.cpp  risk_eval_module_gflags.hpp  sensor_fusion_module_gflags.cpp  sensor_fusion_module_gflags.hpp
services/backend/modules/: sample_modules.cpp
services/backend/test/: actuator_coord_module.cpp  compete_stress_modules.cpp  http_frame_sink_module.cpp  image_frame_channel_helpers.hpp  path_plan_module.cpp  risk_eval_module.cpp  sensor_fusion_module.cpp
services/broker/: CMakeLists.txt
services/infer/: CMakeLists.txt
tests/: CMakeLists.txt  bench_counter.py  send_image.py
tests/infrastructure/: backend_main_smoke.sh  third_party_probe.cpp
tests/resources/backend_integration/: README.md  actuator_coord_io.json  compete_stress_consumer_io.json  compete_stress_producer_io.json  feature_extract_io.json  feature_extract_replica_io.json  frame_source_io.json  http_frame_sink_io.json  http_gateway_io.json  launch_plan.json  launch_plan_compete_stress.json  launch_plan_complex.json  launch_plan_gateway_integration.json  logging_module_io.json  path_plan_io.json  result_sink_io.json  result_sink_replica_io.json  risk_eval_io.json  sensor_fusion_io.json  validate_compete_stress.sh
tests/resources/proto/: README.md  unified_output_envelope.proto  unified_output_envelope_gtest.cpp
tests/resources/proto/actuator_coord/: actuator_coord_core.proto
tests/resources/proto/path_plan/: path_plan_core.proto
tests/resources/proto/risk_eval/: risk_eval_core.proto
tests/resources/proto/sensor_fusion/: sensor_fusion_telemetry.proto
(+92 files in other folders)
