cmake_minimum_required(VERSION 3.22)
project(mould_gate LANGUAGES CXX)

# gate_core — HTTP ingress gateway core library
# 当前为 INTERFACE，后续任务添加源文件时转为 STATIC
add_library(gate_core INTERFACE)
target_link_libraries(gate_core INTERFACE common_build_flags Moduo::Moduo)
target_include_directories(gate_core INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")

if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/oss/CMakeLists.txt")
  add_subdirectory(oss)
  if(TARGET gate_oss)
    target_link_libraries(gate_core INTERFACE gate_oss)
  endif()
endif()

if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/http/CMakeLists.txt")
  add_subdirectory(http)
  if(TARGET gate_http)
    target_link_libraries(gate_core INTERFACE gate_http)
  endif()
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/handler/CMakeLists.txt")
  add_subdirectory(handler)
  if(TARGET gate_handler)
    target_link_libraries(gate_core INTERFACE gate_handler)
  endif()
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/module/CMakeLists.txt")
  add_subdirectory(module)
  if(TARGET gate_module)
    target_link_libraries(gate_core INTERFACE gate_module)
  endif()
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tests/CMakeLists.txt")
  add_subdirectory(tests)
endif()
